--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-polyfill": "^6.26.0",
+    "chart.js": "^2.8.0",
     "live-server": "^1.2.1",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
