--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^2.8.0",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
+    "file-loader": "^4.2.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.13.0",
